build related changes
- allow java>8 for building the lab
- rm jaxb into an project of its own (must run with java==8)
- mv generated jaxb beans to src/main/java
- update mvn plugin versions
- extend wedo tests, add flag to switch them off
- wedo runner uses new temp directory
- rm flags from javaa integration tests
- use ProcessBuilder for node call
- update mvn plugins